WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301416
[Navigation API] navigate-replace-same-document.html is flaky on WPT
https://bugs.webkit.org/show_bug.cgi?id=301416
Summary
[Navigation API] navigate-replace-same-document.html is flaky on WPT
rupin
Reported
2025-10-24 01:09:27 PDT
[Navigation API] navigate-replace-same-document.html is failing
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-24 01:09:32 PDT
<
rdar://problem/163323288
>
rupin
Comment 2
2025-10-24 01:51:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52946
EWS
Comment 3
2025-10-25 00:25:15 PDT
Committed
302130@main
(865a045f39f6): <
https://commits.webkit.org/302130@main
> Reviewed commits have been landed. Closing PR #52946 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug